objects/Alliance_and_Channel_Partner_ABP__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Alliance_Channel_Partner_ABP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alliance &amp; Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Alliance_Channel_Partner_ABP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner__c</fullName>
        <formula>IF( Account__r.Alliance_Partner_Flag__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alliance Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Business_Group__c</controllingField>
            <picklistValues>
                <fullName>Applications and Business Solutions (ABS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy/IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Security Products (ESP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Solution Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology Outsourcing (ITO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Management (ITM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services (MPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertica</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <formula>IF(Account__r.Channel_Partner_Flag__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue_Potential_to_HP_M__c</fullName>
        <inlineHelpText>Size of potential business for HP partner influences in your account</inlineHelpText>
        <label>Estimated Revenue Potential to HP($M)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HP_Partner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HP Partner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_Channel_Partner_ABP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HPs_Strategy_to_Work_with_the_Partner__c</fullName>
        <label>HP&apos;s Strategy to Work with the Partner</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Contact_at_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Contact at Partner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Alliance_Channel_Partner_ABP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Focus_Areas_on_the_Account__c</fullName>
        <label>Partner Focus Areas on the Account</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Influence_on_Account__c</fullName>
        <label>Partner Influence on Account</label>
        <picklist>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <formula>IF( Account__r.Alliance_Partner_Flag__c ,&quot;Alliance Partner&quot;,&quot; &quot;) &amp; 
IF(Account__r.Channel_Partner_Flag__c,&quot;Channel Partner&quot;,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select if this partner sourced the deal AND the &quot;deal source&quot; field is identified as &quot;partner&quot;</inlineHelpText>
        <label>Sourced</label>
        <type>Checkbox</type>
    </fields>
    <label>Alliance &amp; Channel Partner</label>
    <nameField>
        <displayFormat>ACP-{000}</displayFormat>
        <label>Partner Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Landscape</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>